--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+@import url('https://cdn.syncfusion.com/ej2/material.css');
+:root {
+  --bg-color: #EFD9E7;
+  --text-color: white;
+  --main-color: #AE4387;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sidebar {
+  box-shadow: rgba(131, 113, 130, 0.11) 0px 7px 30px 0px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.divider {
+  position: fixed;
+  top: 15%;
+  right: 1%;
+  width: 1px;
+  height: 100vh;
+  border-right: 1px dashed #999999; /* Dashed border */
+  z-index: 1000; /* Ensure it's above other elements */
+}
+.nav-button:hover + .side-menu {
+  transform: translateX(0);
+}
+.nav-item,
+.navbar {
+  z-index: 1000000;
+}
+.sidebar{
+  z-index: 10000000;
+}
+@media  screen and (max-width:800px) {
+  .sidebar{
+    z-index: 10000000;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.gradient-border {
+  border-width: 0;
+  height: 1px;
+  background: linear-gradient(to right, #F9F0F5, #cccccc,#F9F0F5); /* Example gradient */
+}
+.navlink-before::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 1px;
+  background-color: var(--main-color); /* Tailwind color: gray-700 */
+}
+/* CSS for RTL Wrapper */
+.rtl-wrapper {
+  direction: rtl;  /* Set the direction to LTR for the wrapper */
+  overflow-y: auto; /* Enable vertical scrolling */
+  height: 100vh;  /* Set height to full viewport height */
 }
 
-.App-link {
-  color: #61dafb;
+/* Inner content should have RTL direction */
+.rtl-wrapper .content {
+  direction: rtl;  /* Set the inner content to RTL */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Custom scrollbar for the wrapper */
+.rtl-wrapper::-webkit-scrollbar {
+  width: 10px;
+}
+
+.rtl-wrapper::-webkit-scrollbar-thumb {
+  background-color: var(--bg-color);
+}
+
+.rtl-wrapper::-webkit-scrollbar-track {
+  background-color: var(--text-color);
+  width: 0px;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--bg-color);
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--text-color);
+  width: 0px;
 }
